--- a/uw-frame-components/css/themes/common-variables.less
+++ b/uw-frame-components/css/themes/common-variables.less
@@ -171,6 +171,7 @@
   Transitions
 */
 @link-hover-transition: color .4s cubic-bezier(.25,.8,.25,1);
+@mascot-transition: all .4s cubic-bezier(.25,.8,.25,1);
 
 /*
  * Custom Mixins
